<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.kuali.rice</groupId>
	<artifactId>rice</artifactId>
	<packaging>pom</packaging>
	<name>Kuali Rice</name>
	<version>0.9.1</version>
	<description>
		The Kuali Rice effort provides an enterprise class middleware suite of integrated products that allows both Kuali and non-Kuali applications
		to be built in an agile fashion, such that developers will be able to react to end-user business requirements in an efficient and productive
		manner, so that they can produce high quality business applications.
	</description>
	<url>http://rice.kuali.org</url>
	<inceptionYear>2007</inceptionYear>
	<licenses>
		<license>
			<name>The Kuali Foundation Educational Community License 1.0</name>
			<url>https://test.kuali.org/confluence/display/KULDOC/The+Kuali+Foundation+ECL</url>
			<distribution>manual</distribution>
		</license>
	</licenses>
	<organization>
		<name>The Kuali Foundation</name>
		<url>http://kuali.org/</url>
	</organization>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<testResources>
					<testResource>
						<filtering>true</filtering>
						<directory>${basedir}/src/test/resources</directory>
						<includes>
							<include>META-INF/${project.name}-test-config.xml</include>
                            <include>META-INF/sample-app-test-config.xml</include>
						</includes>
					</testResource>
					<testResource>
						<directory>${basedir}/src/test/resources</directory>
						<excludes>
							<exclude>${project.name}-test-config.xml</exclude>
						</excludes>
					</testResource>
				</testResources>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
                            <!--
                            <meminitial>256</meminitial>
                            <maxmem>2048</maxmem>
                            -->
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.3</version>
						<configuration>
							<useFile>false</useFile>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
								<include>**/*Test.java</include>
                            </includes>
							<forkMode>once</forkMode>
							<reportFormat>plain</reportFormat>
							<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
						</configuration>
					</plugin>
                    <!--
					<plugin>
						<artifactId>maven-clover-plugin</artifactId>
						<executions>
							<execution>
								<id>main</id>
								<phase>verify</phase>
								<goals>
									<goal>instrument</goal>
									<goal>aggregate</goal>
									<goal>log</goal>
								</goals>
							</execution>
							<execution>
								<phase>pre-site</phase>
								<goals>
									<goal>instrument</goal>
									<goal>aggregate</goal>
									<goal>save-history</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<jdk>1.5</jdk>
							<licenseLocation>kns/src/test/config/clover.license</licenseLocation>
						</configuration>
					</plugin>
                    -->
					<plugin>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.3</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.0.2</version>
						<configuration>
							<outputDirectory>/tmp</outputDirectory>
							<finalName>rice-source</finalName>
							<attach>false</attach>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.2</version>
					</plugin>
                    <plugin>
                      <artifactId>maven-assembly-plugin</artifactId>
                      <version>2.2-beta-2.nrm.1</version>
                      <configuration>
                        <descriptors>
                          <descriptor>core/src/main/assembly/project.xml</descriptor>
                          <descriptor>standalone/src/main/assembly/standalone.xml</descriptor>
                        </descriptors>
                      </configuration>
                    </plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>install-kns-dev</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<modules>
		<module>core</module>
		<module>shared</module>
		<module>testharness</module>
		<module>ksb</module>
		<module>kns</module>
        <module>kim-api</module>
		<module>kim</module>
		<module>kew</module>
		<module>ken</module>
        <module>standalone</module>
	</modules>
	<repositories>
		<repository>
			<id>kuali</id>
			<name>Kuali Repository</name>
			<url>https://test.kuali.org/maven</url>
		</repository>
		<repository>
			<id>connector</id>
			<name>Connector</name>
			<url>http://julien.dubois.free.fr/maven2/</url>
		</repository>
	</repositories>
	
	<!-- Using the following plugin repository gives us a copy of the Maven assembly plugin which actually works -->
	<pluginRepositories>
		<pluginRepository>
			<id>googlecode</id>
			<url>http://mavenversionedsnapshots.googlecode.com/svn/trunk/</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencies>

		<dependency>
			<groupId>jmeter</groupId>
			<artifactId>jmeter</artifactId>
			<version>2.3-RC4</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>6.1.1</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api-2.5</artifactId>
					<groupId>org.mortbay.jetty</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.1.2</version>
		</dependency>

		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>


		<dependency>
			<groupId>tomcat</groupId>
			<artifactId>jasper-compiler</artifactId>
			<version>5.5.15</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>tomcat</groupId>
			<artifactId>jasper-runtime</artifactId>
			<version>5.5.15</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>tomcat</groupId>
			<artifactId>jasper-compiler-jdt</artifactId>
			<version>5.5.15</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.0</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1</version>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>logkit</artifactId>
					<groupId>logkit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>avalon-framework</artifactId>
					<groupId>avalon-framework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring</artifactId>
			<version>2.0.4</version>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jsf-api</artifactId>
					<groupId>javax.faces</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-mock</artifactId>
			<version>2.0.4</version>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springmodules</groupId>
			<artifactId>spring-modules-ojb</artifactId>
			<version>0.8a</version>
		</dependency>

		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>jta</artifactId>
			<version>1.0.1B</version>
		</dependency>

		<dependency>
			<groupId>javax.resource</groupId>
			<artifactId>connector-api</artifactId>
			<version>1.5</version>
		</dependency>

		<dependency>
			<groupId>wss4j</groupId>
			<artifactId>wss4j</artifactId>
			<version>1.5.1</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>

		<dependency>
			<groupId>ojb</groupId>
			<artifactId>db-ojb</artifactId>
			<version>1.0.4-patch</version>
		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-core</artifactId>
			<version>4.1.1</version>
		</dependency>

		<dependency>
			<groupId>backport-util-concurrent</groupId>
			<artifactId>backport-util-concurrent</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.xfire</groupId>
			<artifactId>xfire-all</artifactId>
			<version>1.2.6</version>
		</dependency>

		<dependency>
			<groupId>xapool</groupId>
			<artifactId>xapool</artifactId>
			<version>1.5.0-patch</version>
		</dependency>

		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.2.2.0</version>
		</dependency>

		<dependency>
			<groupId>jotm</groupId>
			<artifactId>jotm</artifactId>
			<version>2.0.10</version>
		</dependency>

		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc14</artifactId>
			<version>10.1.0.3.0</version>
		</dependency>

		<dependency>
			<groupId>struts</groupId>
			<artifactId>struts</artifactId>
			<version>1.2.9</version>
		</dependency>

		<dependency>
			<groupId>struts</groupId>
			<artifactId>struts-el</artifactId>
			<version>1.2.9</version>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>displaytag</groupId>
			<artifactId>displaytag</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.2.2</version>
		</dependency>

		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>oscache</artifactId>
			<version>2.3.2</version>
		</dependency>

		<dependency>
			<groupId>dwr</groupId>
			<artifactId>dwr</artifactId>
			<version>1.1.3</version>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>1.11</version>
			<exclusions>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>quartz</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.1.1</version>
			<scope>compile</scope>
		</dependency>
    <!--
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>2.0.2</version>
		</dependency>
    -->
	</dependencies>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report-only</report>
                        </reports>
                    </reportSet>
                </reportSets>
			</plugin>
            <!-- turn off clover so we don't get duplicate test runs
                 wait until Atlassian gets this straightened out...
            <plugin>
                <artifactId>maven-clover-plugin</artifactId>
            </plugin>
            -->
		</plugins>
	</reporting>
	<distributionManagement>
		<repository>
			<id>ssh-repository</id>
			<url>scpexe://wsa123.uits.indiana.edu/usr/local/apache/htdocs/maven</url>
		</repository>
	</distributionManagement>
</project>


